readme and screenshot

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -54,5 +54,8 @@
     },
     "ClipFailedTip": {
         "message": "<div class=\"jz-clipfailed-tip\">Sorry, no content has been found~~</div>"
+    },
+    "LoadingTip": {
+        "message": "<div class=\"jz-loading-tip\">Loading content...</div>"
     }
 }
