--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -37,6 +37,9 @@
     "Edit": {
         "message": "Edit"
     },
+    "SaveNote": {
+        "message": "Save as Note"
+    },
     "Save": {
         "message": "Save"
     },
