--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -60,5 +60,29 @@
     },
     "LoadingTip": {
         "message": "<div class=\"jz-loading-tip\">Loading content...</div>"
+    },
+    "GeneralOption": {
+        "message": "General Options"
+    },
+    "DictOption": {
+        "message": "Lookup phrase"
+    },
+    "DictHostpage": {
+        "message": "Host Page"
+    },
+    "DictJzPage": {
+        "message": "JZ Page"
+    },
+    "DictSelection": {
+        "message": "(Double Click)Mouse Select"
+    },
+    "DictMouse": {
+        "message": "Mouse Hover"
+    },
+    "OptionSavedTip": {
+        "message": "Option saved, please refresh the opened page."
+    },
+    "Disabled": {
+        "message": "禁用"
     }
 }
