update to v1.3.4: bug fix

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -7,6 +7,10 @@
         "description": "extension name",
         "message": "Piggy Reader"
     },
+    "ExtensionShortName": {
+        "description": "extension short name",
+        "message": "Reader"
+    },
     "BrowserActionTitle": {
         "description": "extension name",
         "message": "Piggy Reader"
